# porto-mare

./: .gitignore  pyproject.toml  requirements.txt
app/: README.md  main.py
app/api/routes/: ports_routes.py  states_routes.py  tide_routes.py
app/api/schemas/: tide_schemas.py
app/application/services/: tide_change_finder.py
app/application/use_cases/: generate_tide_message_use_case.py  list_ports_use_case.py  list_states_use_case.py
app/config/: settings.py
app/domain/models/: brazilian_state.py  port.py  state.py  tide.py  tide_change.py
app/domain/ports/: ai_provider.py  location_provider.py  tide_provider.py
app/infrastructure/ai/: openai_provider.py
app/infrastructure/location/: api_location_provider.py  cached_location_provider.py
app/infrastructure/tide/: tide_api_provider.py
