[project]
name = "porto-mare"
version = "0.1.0"
description = "REST API that provides tide information for Brazilian ports and generates contextual messages using AI based on the next tide change."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pydantic_settings"
]
